<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">约吧互动</string>
    <string name="search_live">搜索主播</string>
    <string name="no_data"> </string>
    <string name="shenzhen">深圳</string>
    <string name="action_left">发起活动</string>
    <string name="action_mid"></string>
    <string name="action_right">发起直播</string>
    <string name="empty" />
    <string name="head">这里是HeadView</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string name="title_livemessage">消息</string>
    <string name="rc_conversation_list_empty_prompt">"暂无聊天信息"</string>
    <string name="rc_conversation_list_not_connected">"尚未连接!"</string>
    <string name="hint_message">还没有收到消息哦</string>
    <string name="notickets">当前日期没有完成的票务噢</string>
    <string name="charts_title">主办方排行</string>
    <string name="com_facebook_dialogloginactivity_ok_button">OK</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_log_in_button">Log in with Facebook</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_logo_content_description">Facebook Logo</string>
    <string name="com_facebook_usersettingsfragment_log_in_button">Log in…</string>
    <string name="com_facebook_usersettingsfragment_logged_in">Logged in</string>
    <string name="com_facebook_usersettingsfragment_not_logged_in">Not logged in</string>
    <string name="com_facebook_placepicker_subtitle_format">%1$s • %2$,d were here</string>
    <string name="com_facebook_placepicker_subtitle_catetory_only_format">%1$s</string>
    <string name="com_facebook_placepicker_subtitle_were_here_only_format">%1$,d were here</string>
    <string name="com_facebook_picker_done_button_text">Done</string>
    <string name="com_facebook_choose_friends">Choose Friends</string>
    <string name="com_facebook_nearby">Nearby</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_requesterror_web_login">Your Facebook account is locked. Please log into www.facebook.com to continue.</string>
    <string name="com_facebook_requesterror_relogin">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_password_changed">Your Facebook password has changed. Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_reconnect">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_permissions">This app doesn’t have permission to do this. To change permissions, try logging into the app again.</string>
    <string name="umeng_socialize_text_laiwang_key">来往</string>
    <string name="umeng_socialize_text_laiwang_dynamic_key">来往动态</string>
    <string name="umeng_socialize_laiwang_default_content">友盟社会化组件（SDK）让移动应用快速整合社交分享功能</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">放开以刷新</string>
    <string name="pull_to_refresh_refreshing_label">正在刷新中</string>
    <string name="pull_to_refresh_tap_label">点击刷新</string>
    <string name="umeng_socialize_network_break_alert">请连接网络后再尝试！</string>
    <string name="umeng_socialize_comment">评论</string>
    <string name="umeng_socialize_comment_detail">评论详情</string>
    <string name="umeng_socialize_back">返回</string>
    <string name="umeng_socialize_near_At">最近@的好友</string>
    <string name="umeng_socialize_friends">关注的好友</string>
    <string name="umeng_socialize_send">发布</string>
    <string name="umeng_socialize_tip_blacklist">对不起，因为违反了用户协议您已被禁言.</string>
    <string name="umeng_socialize_tip_loginfailed">登录失败…</string>
    <string name="umeng_socialize_msg_sec">秒前</string>
    <string name="umeng_socialize_msg_min">分钟前</string>
    <string name="umeng_socialize_msg_hor">小时前</string>
    <string name="umeng_socialize_ucenter_login_title_guide">游客登录</string>
    <string name="umeng_socialize_ucenter_login_title_platform">登录帐号</string>
    <string name="umeng_socialize_share_content">友盟社会化组件（SDK）让移动应用快速整合社交分享功能，我们简化了社交平台的接入，为开发者提供坚实的基础服务。（一）支持各大主流社交平台， （二）支持图片、文字、gif动图、音频、视频；@好友，关注官方微博等功能。 （三）提供详尽的后台用户社交行为分析。www.umeng.com/social</string>
    <string name="umeng_socialize_login_qq">QQ空间</string>
    <string name="umeng_socialize_login">登录</string>
    <string name="umeng_socialize_text_choose_account">选择已有帐号登录</string>
    <string name="umeng_socialize_text_authorize">授权</string>
    <string name="umeng_socialize_text_unauthorize">未授权</string>
    <string name="umeng_socialize_text_ucenter">个人中心</string>
    <string name="umeng_socialize_text_login_fail">登录失败了，请重试</string>
    <string name="umeng_socialize_text_comment_hint">说点什么吧…</string>
    <string name="umeng_socialize_text_friend_list">好友列表</string>
    <string name="umeng_socialize_text_visitor">游客</string>
    <string name="umeng_socialize_text_tencent_no_connection">无法连接到腾讯微博客户端</string>
    <string name="umeng_socialize_text_tencent_oauth_login_fail">授权登录失败</string>
    <string name="umeng_socialize_text_tencent_version_no_match">版本不匹配，SSO只对微博客户端V3.8.1及以上的版本提供支持</string>
    <string name="umeng_socialize_text_tencent_no_install">未安装腾讯微博客户端</string>
    <string name="umeng_socialize_text_waitting">请稍候...</string>
    <string name="umeng_socialize_text_waitting_weixin">跳转微信中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_weixin_circle">跳转朋友圈中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_yixin">跳转易信中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_yixin_circle">跳转易信朋友圈中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_qq">跳转QQ中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_qzone">跳转QZone中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_redirect">跳转</string>
    <string name="umeng_socialize_text_waitting_message">,请稍候...</string>
    <string name="umeng_socialize_text_loading_message">载入中,请稍候...</string>
    <string name="umeng_socialize_text_tencent_key">腾讯微博</string>
    <string name="umeng_socialize_text_sina_key">微博</string>
    <string name="umeng_socialize_text_qq_key">QQ</string>
    <string name="umeng_socialize_text_qq_zone_key">QQ空间</string>
    <string name="umeng_socialize_text_renren_key">人人网</string>
    <string name="umeng_socialize_text_douban_key">豆瓣网</string>
    <string name="umeng_socialize_text_weixin_key">微信</string>
    <string name="umeng_socialize_text_weixin_circle_key">微信朋友圈</string>
    <string name="umeng_socialize_text_add_custom_platform">请配置用户平台</string>
    <string name="umeng_example_home_btn_plus">社交分享</string>
    <string name="umeng_socialize_text_waitting_share">分享中…</string>
    <string name="umeng_socialize_content_hint">说点啥…</string>
    <string name="umeng_socialize_cancel_btn_str">取消</string>
    <string name="umeng_socialize_send_btn_str">发送</string>
    <string name="umeng_socialize_img_des" />
    <string name="umeng_socialize_share">分享</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="the_spring_festival">春节</string>
    <string name="lantern_festival">元宵节</string>
    <string name="the_dragon_boat_festival">端午节</string>
    <string name="double_seventh_day">七夕</string>
    <string name="the_mid_autumn_festival">中秋节</string>
    <string name="the_double_ninth_festival">重阳节</string>
    <string name="the_laba_rice_porridge_festival">腊八</string>
    <string name="new_years_day">劳动节</string>
    <string name="valentines_day">情人节</string>
    <string name="international_womens_day">情人节</string>
    <string name="arbor_day">植树节</string>
    <string name="fools_day">愚人节</string>
    <string name="labour_day">元旦</string>
    <string name="chinese_youth_day">青年节</string>
    <string name="childrens_day">儿童节</string>
    <string name="partys_day">建党节</string>
    <string name="the_armys_day">建军节</string>
    <string name="teachers_day">教师节</string>
    <string name="national_day">国庆节</string>
    <string name="christmas_day">圣诞节</string>
    <string name="peace_day">和平紀念</string>
    <string name="anti_aggression_day">反侵略日</string>
    <string name="tw_youth_day">青年节</string>
    <string name="tw_childrens_day">儿童节</string>
    <string name="anniversary_of_lifting_martial_law">解严纪念日</string>
    <string name="armed_forces_day">军人节</string>
    <string name="united_nations_day">联合国日</string>
    <string name="retrocession_day">光复节</string>
    <string name="national_father_day">國父誕辰</string>
    <string name="hksar_establishment_day">香港特别行政区成立纪念日</string>
    <string name="slight_cold">小寒</string>
    <string name="great_cold">大寒</string>
    <string name="spring_begins">立春</string>
    <string name="the_rains">雨水</string>
    <string name="insects_awaken">惊蛰</string>
    <string name="vernal_equinox">春分</string>
    <string name="clear_and_bright">清明</string>
    <string name="grain_rain">谷雨</string>
    <string name="summer_begins">立夏</string>
    <string name="grain_buds">小满</string>
    <string name="grain_in_ear">芒种</string>
    <string name="summer_solstice">夏至</string>
    <string name="slight_heat">小暑</string>
    <string name="great_heat">大暑</string>
    <string name="autumn_begins">立秋</string>
    <string name="stopping_the_heat">处暑</string>
    <string name="white_dews">白露</string>
    <string name="autumn_equinox">秋分</string>
    <string name="cold_dews">寒露</string>
    <string name="hoar_frost_falls">霜降</string>
    <string name="winter_begins">立冬</string>
    <string name="home_tab_time">时间</string>
    <string name="all">全部</string>
    <string name="select_activity_start">即将开始</string>
    <string name="select_activity_latest_week">最近一周</string>
    <string name="select_activity_today">今天</string>
    <string name="select_activity_tomorrow">明天</string>
    <string name="select_activity_weekend">周末</string>
    <string name="select_activity_cost">费用</string>
    <string name="select_activity_free">免费</string>
    <string name="select_activity_fee">收费</string>
    <string name="select_activity_condition">筛选</string>
    <string name="select_activity_nearly_accuvally">附近活动</string>
    <string name="select_activity_hot_accuvally">热门活动</string>
    <string name="select_sure">确定筛选</string>
    <string name="string_RefuseCause">拒绝原因</string>
    <string name="string_ThinkAbout">在想想</string>
    <string name="string_Yes">确定</string>
    <string name="string_NoTime">没时间</string>
    <string name="string_SchedulePull">档期已满</string>
    <string name="string_Other">其他</string>
    <string name="string_WarmReminderd">温馨提醒</string>
    <string name="string_WarmReminderdContent">请规划好时间准时赴约，如失3次及以上，即刻列入到不诚信用户名单！</string>
    <string name="string_SubmitSuccessfully">提交成功</string>
    <string name="string_WaitForFeedback">请等待该名人反馈</string>
    <string name="string_WaitForFeedbackone">据统计，该名人</string>
    <string name="string_WaitForFeedbacktwo">平均半天内回应</string>
    <string name="string_WaitForFeedbackthree">高接受率</string>
    <string name="string_Iknow">知道啦</string>
</resources>